tests/integration/targets/playbooks/provision_playbook/enterprise-example.com/platform/opa-gatekeeper/policies/privileged-containers/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds: 
          - Pod
    excludedNamespaces:
      - kube-system
      - elastic-system
